Updated texts with references

--- a/learningOutcomes/communication/communication.html
+++ b/learningOutcomes/communication/communication.html
@@ -73,6 +73,7 @@
                 <p>WhatsApp has also shown to be a very useful tool for keeping a direct link with clients. We could easily and quickly get into contact with our clients for potential questions or concerns and provide status reports. </p>
                 <p>All things considered, WhatsApp's ease of use and capabilities significantly improved the communication dynamics of our project, resulting in a more efficient and effective workflow. </p>
                 <p>During this semester, I discovered the value of using effective communication tools to improve teamwork and client relationships. WhatsApp enabled us to respond rapidly to changes and feedback, resulting in a more responsive project environment. I also noticed how important coordinated group discussions are for keeping clarity and coherence in the project. This experience has shown how important clear, consistent, and timely communication is in the success of group projects. </p>
+                <p>Below you can see different conversations I've had through WhatsApp this semester.</p>
             </div>
             <div class="carousel-container" id="carousel1">
                 <h3>Communication</h3>
@@ -114,6 +115,7 @@
                 <p>As for contact with the teachers it was used as a tool for meeting scheduling, getting feedback, and answering questions related to the projects. I could share my progress, set up online video calls with ease, and get quick feedback from my lecturers. I was able to keep in line with the project requirements and make the required adjustments depending on the advice I received thanks to teams.</p>
                 <p>All things considered, Microsoft Teams was essential in helping me to communicate more effectively and improve the productivity of my project process, which in turn allowed for smooth collaboration and regular help from my teachers. </p>
                 <p>Through the use of Microsoft Teams, I realized the value of having a communication tool ready with easy access to other stakeholders. Furthermore, the convenience of organizing and performing virtual meetings with teachers gave a direct channel of support and feedback, which was extremely beneficial in developing a strong project. </p>
+                <p>Below you can see different conversations I've had through Teams this semester.</p>
             </div>
             <div class="carousel-container" id="carousel2">
                 <h3>Communication</h3>
@@ -154,6 +156,7 @@
                 <p>I set up an online meeting with my client Lighttown Speakers as part of the project so that I could have a thorough interview. The purpose of this meeting was to learn more about my client and to gain a deeper understanding of the project requirements. We scheduled a time that worked for both of us using Microsoft Teams, so all of the important players were there for the conversation. </p>
                 <p>I made a few questions to find out the most important things I needed about their needs, preferences, and expectations. Through this dialogue, I was able to establish the project scope, align my design approach with the client's vision, and identify key areas for improvement. The information I took away from this discussion was really beneficial in guiding the direction of my project and ensuring that the solutions I created were tailored precisely to fit the objectives of Lighttown Speakers. </p>
                 <p>I discovered how important it is to carry out well-prepared interviews in order to fully comprehend client needs. I learned how to ask the proper questions at this meeting to get deeper insights, which is essential for creating solutions that really match the needs of the customer. My organizational and time-management abilities have also improved as a result of planning and directing online meetings, which has ensured successful and productive interactions with clients. </p>
+                <p>Below you can see the meeting I've had through with our client.</p>
             </div>
             
             <a href="https://stichtingfontys-my.sharepoint.com/:v:/g/personal/537602_student_fontys_nl/EcxRQknFTYVBn4jJD8jDpYgB4S3hzZb2DAd5qHbfFXVQXA?e=0We4b6&nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D" class="further-btn" target="_blank">View Meeting</a>   
@@ -169,6 +172,7 @@
                 <p>I was able to watch a club meeting in progress, which provided me with an exclusive behind-the-scenes peek at Lighttown Speakers. I observed firsthand how their meetings are run, the roles that members assume, and the activities that they engage in. This experience gave my project important context and enabled me to better match my design ideas to the club's real objectives and practices. </p>
                 <p>I also saw a member graduate from their pathway, which demonstrated the encouraging and goal-oriented atmosphere of the organization. My comprehension of the client and ensuring that our project satisfies the actual needs of Lighttown Speakers and its members were greatly influenced by this visit. </p>
                 <p>I learned from this visit how crucial it is to interact directly with clients in order to fully comprehend their requirements and surroundings. Deep insights were gained via holding an affinity mapping session and watching the club's operations. These insights were essential to making sure our project goals matched the client's expectations. This practical experience demonstrated the importance of immersive research techniques in revealing specific and useful ideas that, in turn, result in more efficient and customized design solutions.</p>
+                <p>Below you can see a couple pictures of me at the club as proof.</p>
             </div>
             <div class="carousel-container" id="carousel3">
                 <h3>Communication</h3>
@@ -205,6 +209,7 @@
                 <p>For our project, I utilized Outlook to schedule a meeting with our client, ensuring we had a dedicated time to discuss the project's details and expectations. This tool allowed for coordination and made it easy to set up an appointment that suited both parties.</p>
                 <p>Additionally, I relied on Outlook to stay updated with the latest news and announcements from our teachers. By regularly checking my emails, I ensured that I was always informed about upcoming deadlines, feedback sessions, and any changes in the project schedule. This consistent communication helped keep our project on track and aligned with the client's needs.</p>
                 <p>Using Outlook taught me the importance of effective scheduling and proactive communication in project management. By using Outlook's scheduling features, I was able to ensure timely meetings with our client, which was useful for aligning our efforts with their expectations. Staying updated through regular email checks helped me manage deadlines and adapt to any changes, reinforcing the value of staying organized and informed throughout the project.</p>
+                <p>Below you can see an example of how I used Outlook to communicate with our client.</p>
             </div>
             
             <div class="carousel-container" id="carousel4">
