--- a/learningOutcomes/frontEndDevelopment/frontEnd.html
+++ b/learningOutcomes/frontEndDevelopment/frontEnd.html
@@ -72,7 +72,8 @@
                 <p>For example, I used JavaScript to dynamically switch between the language selections on the website. This is not working yet, but the layout is there; the translation logic is missing. I also used flexbox layouts and CSS grid systems to make responsive designs that would provide the best possible viewing experiences on a range of devices.</p>
                 <p>I paid close attention to detail the whole development process to make sure that all design aspects matched Lighttown Speakers' branding and user experience objectives while also being visually appealing. Thanks to this the finished website looks cohesive and functional.</p>
                 <p>I learned a lot about web development while working on the Lighttown Speakers website, especially how important it is to find a balance between practicality and aesthetics. My proficiency with HTML, CSS, and JavaScript had been improved by the experience, which also made clear how important it is to create designs that are user-friendly and responsive. This project also demonstrated how important it is to match branding and UX goals with web design in order to guarantee that the finished result matches the client's vision and satisfies the needs of users.</p>
-           </div>
+                <p>Below are some images of my learnings and a link to my repository for those interested.</p>
+            </div>
             <div class="carousel-container" id="carousel1">
                 <h3>Code Examples</h3>
                 <div class="carousel">
@@ -115,6 +116,7 @@
                 <p>Furthermore, I included root color variables into the CSS code to make it simple to alter and maintain the portfolio's aesthetic. This approach guarantees consistency and enables fast changes across the entire website.</p>
                 <p>I wanted to create a polished, adaptable portfolio that not only displayed my work but also showed my increasing front-end programming skills and abilities through the use of these technologies and design ideas.</p>
                 <p>Making my portfolio showed me how important it is to blend practical usability with beautiful design. I gained knowledge on how to use interactive JavaScript components to improve user experience and CSS to build aesthetically pleasing layouts. Furthermore, the significance of scalable and maintainable design methods was highlighted through the use of root color variables. This project showed my ongoing progress in front-end development and underlined my ability to adapt to new design difficulties and successfully present my work.</p>
+                <p>Below are some images of my learnings and a link to my repository for those interested.</p>
             </div>            
             <div class="carousel-container" id="carousel2">
                 <h3>Code Examples</h3>
@@ -164,7 +166,8 @@
                 <p>The project served as a great example of the value of performance optimization, as seen by the lazy loading feature I added, which loads Pokemon images as they become visible.</p>
                 <p>In summary, the SprintX Project improved my grasp of front-end development and increased my understanding of React's potential for building data-driven, interactive online applications. My goal to use the abilities and information I acquired from this project to pursue a career in frontend development has been reinforced by this experience.</p>
                 <p>I gained knowledge on how to organize a React application for maintainability as well as how to manage state efficiently with useState hooks. Moreover, using a third-party API and employing lazy loading improved my comprehension of developing effective, data-driven apps. This project reinforced my desire to focus on frontend development by demonstrating how React can be used to create complex web applications and boosting my confidence in utilizing it.</p>
-             </div>            
+                <p>Below are some images of my learnings and a link to my repository for those interested.</p>
+            </div>            
             <div class="carousel-container" id="carousel3">
                 <h3>Code Examples</h3>
                 <div class="carousel">
