--- a/learningOutcomes/interactiveMediaProducts/mediaProducts.html
+++ b/learningOutcomes/interactiveMediaProducts/mediaProducts.html
@@ -260,6 +260,7 @@
                 <p>In the morning before our presentation, I worked to ensure our presentation looked professional and aligned perfectly with their existing style. I utilized all the content we had gathered so far, carefully organizing it to be visually appealing and easy to follow.</p>
                 <p>Despite the time pressure, I ensured each slide effectively showcased our recommendations. This experience taught me valuable lessons about working under pressure and delivering a presentation that resonated deeply with our client.</p>
                 <p>This experience of putting up a last-minute presentation for Lighttown Speakers improved my ability to adapt quickly and efficiently under pressure. I learned the value of following to established brand guidelines in order to maintain consistency and professionalism in presentations. Additionally, presenting to our client showed the importance of understanding their wants and preferences, ensuring that our concepts were well received. Overall, this experience helped me improve my presentation design and delivery skills, stressing the significance of planning and attention to detail in working with clients</p>
+                <p>Below you can find the entire presentation I made.</p>
             </div>
             
             <div class="carousel-container" id="carousel3">
@@ -277,6 +278,7 @@
                 <p>During the first week of the semester, I developed a colourful paper prototype in the form of a sidescroller. This prototype was created to demonstrate the capabilities of quick interactive media products, showcasing how such prototypes can simulate user interactions and visualize design concepts effectively.</p>
                 <p>The project got positive feedback from both peers and teachers, who were impressed with the rapid development and clear presentation of the prototype. This exercise highlighted the significance of early-stage prototyping in improving user experience for iterative improvements.</p>
                 <p>Through this experience, I learned more about the design process of interactive media products.It helped me realize how prototyping early in the development process may improve user involvement and successfully guide future design decisions.</p>
+                <p>Below you can find a video of the prototype I made.</p>
             </div>            
             <div class="video-container">
                 <h3>Assignment Video</h3>
@@ -328,6 +330,7 @@
                 <div class="underline"></div>
                 <p>The Pokemon Archive project has been a major steppingstone in learning more about interactive media products. It allowed me to dive deep into front-end development using React.js and integrating APIs to bring dynamic Pokemon data to life. Building a user-friendly interface challenged me to consider usability and visual appeal, refining my skills in creating engaging digital experiences.</p>
                 <p>Through this project, I've learned firsthand about the iterative process of design and development. Each stage, from prototyping to user testing, was crucial in improving functionality and ensuring a seamless user experience. It's been rewarding to see how technical skills can directly impact user engagement and satisfaction.</p>
+                <p>Below, you can watch a short video demonstrating the functionality and features of the application I developed.</p>
             </div>
             <div class="video-container-wide">
                 <h3>Pokemon Archive Iteration 1 Test</h3>
